--- a/templates/contato.html
+++ b/templates/contato.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 
-{% block title %}Contato - Clínica do Reparo{% endblock %}
+{% block title %}Contato - Assistência Técnica em Barueri - Clínica do Reparo{% endblock %}
+
+{% block description %}Entre em contato com a Clínica do Reparo para assistência técnica em Barueri. Atendemos Alphaville, Tamboré e toda região. Solicite orçamento gratuito!{% endblock %}
+
+{% block keywords %}contato assistência técnica barueri, orçamento conserto barueri, assistência técnica alphaville, assistência técnica tamboré, telefone assistência técnica barueri{% endblock %}
 
 {% block content %}
 <section class="page-header">
     <div class="container">
-        <h1>Entre em Contato</h1>
-        <p>Estamos prontos para ajudar você</p>
+        <h1>Contato - Assistência Técnica em Barueri</h1>
+        <p>Entre em contato para assistência técnica em Barueri, Alphaville e Tamboré. Estamos prontos para ajudar você!</p>
     </div>
 </section>
 
