--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 
 {% block title %}Assistência Técnica Barueri - Conserto de Celulares, Notebooks e Eletrodomésticos{% endblock %}
 
+{% block og_title %}Assistência Técnica Barueri - Conserto de Celulares, Notebooks e Eletrodomésticos{% endblock %}
+
+{% block twitter_title %}Assistência Técnica Barueri - Conserto de Celulares, Notebooks e Eletrodomésticos{% endblock %}
+
 {% block description %}Assistência técnica especializada em Barueri, Alphaville e Tamboré. Conserto de celulares, notebooks, computadores, máquinas de lavar, micro-ondas, TVs e video games. Técnico certificado com atendimento rápido e garantia.{% endblock %}
 
 {% block keywords %}assistência técnica barueri, conserto de celular barueri, conserto de notebook barueri, assistência técnica alphaville, assistência técnica tamboré, conserto de máquina de lavar barueri, conserto de microondas barueri, conserto de tv barueri, conserto videogame barueri, técnico de eletrônica barueri, reparo de placas eletrônicas barueri, manutenção de notebook barueri, formatação de computador barueri, troca de tela barueri, conserto iphone barueri, conserto samsung barueri, técnico residencial barueri{% endblock %}
