--- a/templates/index.html
+++ b/templates/index.html
@@ -203,11 +203,11 @@
                 <span>Especialistas em Tecnologia</span>
             </div>
             <h1 class="hero-title">
-                <span class="gradient-text">Assistência Técnica em Barueri</span><br>
+                <span class="gradient-text">Assistência Técnica</span><br>
                 Especializada e Técnico Certificado
             </h1>
             <p class="hero-description">
-                Conserto de celulares, notebooks, computadores e eletrodomésticos em Barueri, Alphaville e Tamboré. 
+                Conserto de celulares, notebooks, computadores e eletrodomésticos. 
                 Soluções rápidas, profissionais e com garantia. Seu dispositivo em boas mãos!
             </p>
             <div class="hero-buttons">
